Add react on rails gem

--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,16 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
+.env
+bin/spring
 /log/*
-/tmp/*
+config/database.yml
 !/log/.keep
-!/tmp/.keep
-
-# Ignore Byebug command history file.
-.byebug_history
+/tmp
+db/test.sqlite3
+config/application.yml
+latest.dump
+/public/system
+.DS_Store
+/public/uploads
