--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,25 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
+connection: &connection
+  adapter: postgresql
+  host: localhost
+  username: postgres
+  password: postgres
+  encoding: utf8
+  min_messages: warning #magic sauce
+
+development:
+  database: cable
+  <<: *connection
+
+test:
+  database: cable_test
+  <<: *connection
+
+production:
+  adapter: postgresql
+  database: <%= ENV['PG_DB'] %>
+  username: <%= ENV['PG_USER'] %>
+  password: <%= ENV['PG_PASSWORD'] %>
+  host: localhost
   pool: 5
   timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
