--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ latest.dump
 /public/system
 .DS_Store
 /public/uploads
+# React on Rails
+npm-debug.log*
+node_modules
+
+# Generated js bundles
+/app/assets/webpack/*
